--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,1 +1,20 @@
+/* Hacemos que el "body"tenga una imagen de fondo*/
 
+body{
+background-size:cover; /*Que la imagen ocupe toda la página*/
+/*Añadimos transparencia a la imagen de fondo*/
+background-image: linear-gradient(to bottom, rgba(0,0,0,0.9) 
+ 0%, rgba(0,0,0,0.9) 100%), url(../figuras/nba.jpeg);
+}
+
+/* Definimos la clase "center" para las tablas*/
+table.center {
+    margin-left:auto;
+    margin-right:auto;
+  }
+
+/* Establecemos el formato para h3, h4 y p s*/
+
+h3 {color:red;}
+h4 {color:white;}
+P {color:white; font-size:12pt; font-family:"Verdana",sans-serif;}
